# route-based-slitter

./: Cargo.toml  Dioxus.toml  README.md  docsite_bg.wasm  docsite_out.wasm  input.wasm
harnesses/web-harness/: Cargo.toml  Dioxus.toml
harnesses/web-harness/src/: main.rs
src/: main.rs  router.rs
